2009-11-03  Eric Z. Ayers  <zundel@google.com>

        Reviewed by Timothy Hatcher.

        Fixes a problem where the timeline instrumentation crashes if
        timeline profiling is enabled or disabled in the middle of an
        event dispatch.

        https://bugs.webkit.org/show_bug.cgi?id=31080

        Test: inspector/timeline-trivial.html

        * bindings/js/ScriptController.cpp:
        (WebCore::ScriptController::evaluateInWorld):
        (WebCore::ScriptController::processingUserGestureEvent):
        * inspector/InspectorTimelineAgent.cpp:
        (WebCore::InspectorTimelineAgent::didCompleteCurrentRecord):
        * page/DOMTimer.cpp:
        (WebCore::DOMTimer::fired):

2009-11-03  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        Allow a frame to go back to copy-on-scroll when it ceases being overlapped

        The code was not testing slow-scrolling frames for overlappedness, thinking the answer
        would not matter. That is not the case if the only reason for the slow-scrolling is
        being overlapped.

        * page/FrameView.cpp:
        (WebCore::FrameView::useSlowRepaintsIfNotOverlapped): Added. Returns whether there is any
        reason besides being overlapped that the frame would need to fully repaint on scroll.
        * page/FrameView.h:
        * rendering/RenderWidget.cpp:
        (WebCore::RenderWidget::paint): Use useSlowRepaintsIfNotOverlapped().

2009-11-03  Dmitry Titov  <dimich@chromium.org>

        Not reviewed, Qt build fix.

        Need to use right capitalization for include file.

        * page/Navigator.cpp:

2009-11-03  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Migrate from top bar filters to check boxes in Timeline.

        https://bugs.webkit.org/show_bug.cgi?id=31081

        * inspector/front-end/AbstractTimelinePanel.js:
        (WebInspector.AbstractTimelinePanel.prototype.showCategory):